Fixed compile warning with XForms. Updated all Xforms demonstration scripts.

--- a/gtk-server/gtk-server.cfg
+++ b/gtk-server/gtk-server.cfg
@@ -36,7 +36,7 @@
 # LIB_NAME = libatk-1.0.so, libpango-1.0.so, libgdk_pixbuf_xlib-2.0.so, libglib-2.0.so, libgobject-2.0.so, libcairo.so
 #
 # Glade
-# LIB_NAME = libglade-2.0.so
+# LIB_NAME = libglade-2.0.so.0
 #
 # GtkGlarea, GtkGlExt
 # LIB_NAME = libgtkgl-2.0.so, libgtkglext-x11-1.0.so, libgdkglext-x11-1.0.so
@@ -899,7 +899,7 @@ FUNCTION_NAME = glShadeModel, NONE, NONE, 1, INT
 FUNCTION_NAME = glTranslatef, NONE, NONE, 3, FLOAT, FLOAT, FLOAT
 FUNCTION_NAME = glVertex3f, NONE, NONE, 3, FLOAT, FLOAT, FLOAT
 FUNCTION_NAME = glViewport, NONE, NONE, 4, INT, INT, INT, INT
-FUNCTION_NAME = glXSwapBuffers, NONE, NONE, 2, WIDGET, WIDGET
+FUNCTION_NAME = glXSwapBuffers, NONE, NONE, 2, POINTER, WIDGET
 #
 # Some GL Enums
 #
@@ -1237,6 +1237,7 @@ FUNCTION_NAME = fl_bk_color, NONE, NONE, 1, INT
 FUNCTION_NAME = fl_pieslice, NONE, NONE, 8, INT, INT, INT, INT, INT, INT, INT, INT
 FUNCTION_NAME = fl_rectangle, NONE, NONE, 6, INT, INT, INT, INT, INT, INT
 FUNCTION_NAME = fl_display, NONE, WIDGET, 0
+FUNCTION_NAME = fl_initialize, NONE, POINTER, 5, POINTER, POINTER, STRING, INT, INT
 #
 #---------------------------------------------------------------------------
 #
