Improved HUG macro for 'circle' and 'out' in GTK3.

--- a/gtk-server/gtk-server.cfg
+++ b/gtk-server/gtk-server.cfg
@@ -745,6 +745,14 @@ FUNCTION_NAME = g_signal_stop_emission_by_name, NONE, NONE, 2, WIDGET, STRING
 FUNCTION_NAME = pango_font_description_from_string, NONE, WIDGET, 1, STRING
 FUNCTION_NAME = pango_font_description_free, NONE, NONE, 1, WIDGET
 FUNCTION_NAME = pango_layout_set_markup, NONE, NONE, 3, WIDGET, STRING, INT
+FUNCTION_NAME = pango_cairo_create_layout, NONE, WIDGET, 1, WIDGET
+FUNCTION_NAME = pango_layout_set_text, NONE, NONE, 3, WIDGET, STRING, INT
+FUNCTION_NAME = pango_layout_set_font_description, NONE, NONE, 2, WIDGET, WIDGET
+FUNCTION_NAME = pango_cairo_update_layout, NONE, NONE, 2, WIDGET, WIDGET
+FUNCTION_NAME = pango_cairo_show_layout, NONE, NONE, 2, WIDGET, WIDGET
+FUNCTION_NAME = pango_layout_get_size, NONE, NONE, 3, WIDGET, PTR_INT, PTR_INT
+FUNCTION_NAME = pango_layout_get_width, NONE, INT, 1, WIDGET
+FUNCTION_NAME = pango_layout_get_height, NONE, INT, 1, WIDGET
 #
 # Cairo
 #
@@ -1468,6 +1476,8 @@ FUNCTION_NAME = time, NONE, INT, 1, NULL
 FUNCTION_NAME = memset, NONE, NONE, 3, POINTER, INT, INT
 FUNCTION_NAME = sscanf, NONE, NONE, 3, POINTER, STRING, PTR_INT
 FUNCTION_NAME = abs, NONE, INT, 1, INT
+FUNCTION_NAME = div, NONE, INT, 2, INT, INT
+FUNCTION_NAME = fma, NONE, DOUBLE, 3, DOUBLE, DOUBLE, DOUBLE
 #
 # Some function names are reserved, create an alias
 #
@@ -2303,8 +2313,12 @@ $image GET $cairo
 $rgba : gtk_server_opaque
 gdk_rgba_parse $rgba $1
 gdk_cairo_set_source_rgba $kontext $rgba
+# Calculate radius and coordinates
+$half : div $4 2
+$x : fma $2 1 $half
+$y : fma $3 1 $half
 # Draw circle
-cairo_arc $kontext $2 $3 $4 0 6.28
+cairo_arc $kontext $x $y $half 0 6.28
 $6 VALUE 3
 cairo_stroke $kontext
 JUMP 2
@@ -2476,20 +2490,40 @@ MACRO m_out
 $kontext : gtk_server_macro_var u_draw draw
 $cairo GET $kontext
 $image GET $cairo
-# Set color
+
+# Prepare color
 $rgba : gtk_server_opaque
-#$ggba : gtk_server_opaque
+
+$layout : pango_cairo_create_layout $kontext
+pango_layout_set_text $layout $1 -1
+$font : gtk_server_macro_var m_font font
+
+$desc : pango_font_description_from_string $font
+pango_layout_set_font_description $layout $desc
+pango_font_description_free $desc
+
+# TODO: background color
+#$w : malloc 16
+#$h : malloc 16
+#pango_layout_get_size $layout $w $h
+#gdk_rgba_parse $rgba $3
+#gdk_cairo_set_source_rgba $kontext $rgba
+#cairo_rectangle $kontext 10 10 $w $h
+#cairo_fill $kontext
+
 gdk_rgba_parse $rgba $2
-#gdk_rgba_parse $ggba $3
 gdk_cairo_set_source_rgba $kontext $rgba
-# Draw text
-cairo_select_font_face $kontext "Sans" CAIRO_FONT_SLANT_NORMAL CAIRO_FONT_WEIGHT_NORMAL
-cairo_set_font_size $kontext 14
 cairo_move_to $kontext $4 $5
-cairo_show_text $kontext $1
+pango_cairo_update_layout $kontext $layout
+pango_cairo_show_layout $kontext $layout
+
 # Render
 gtk_image_set_from_surface $image $cairo
 g_free $rgba
+g_object_unref $layout
+
+# g_free $w
+# g_free $h
 
 ENDMACRO
 
@@ -3138,6 +3172,29 @@ pango_font_description_free $desc
 
 ENDMACRO
 
+# ------- GTK3 --------
+
+MACRO m_font
+
+$desc : pango_font_description_from_string $2
+
+# Get two assocs, last assoc is taken as real widget!
+$widget GET $1
+$real GET $widget
+
+# Last assoc is full? If so it is a canvas, skip
+$real VALUE 5
+$widget EMPTY 3
+gtk_widget_modify_font $widget $desc
+JUMP 2
+gtk_widget_modify_font $1 $desc
+
+pango_font_description_free $desc
+
+$font : $2
+
+ENDMACRO
+
 #---------------------------------------------------------------------------
 
 MACRO u_disable
@@ -3320,7 +3377,6 @@ ALIAS_NAME = m_radio_set, u_radio_set
 ALIAS_NAME = m_combo_set, u_combo_set
 ALIAS_NAME = m_text_set, u_text_set
 ALIAS_NAME = m_list_set, u_list_set
-ALIAS_NAME = m_font, u_font
 ALIAS_NAME = m_disable, u_disable
 ALIAS_NAME = m_enable, u_enable
 ALIAS_NAME = m_hide, u_hide
