Improvements in the callback definition for XForms. Made xscreensaver to work properly again.

--- a/gtk-server/gtk-server.cfg
+++ b/gtk-server/gtk-server.cfg
@@ -1152,6 +1152,8 @@ FUNCTION_NAME = fl_hide_form, NONE, NONE, 1, WIDGET
 FUNCTION_NAME = fl_prepare_form_window, NONE, NONE, 4, WIDGET, INT, INT, STRING
 FUNCTION_NAME = fl_show_form_window, NONE, NONE, 1, WIDGET
 FUNCTION_NAME = fl_set_form_position, NONE, NONE, 3, WIDGET, INT, INT
+FUNCTION_NAME = fl_redraw_form, NONE, NONE, 1, WIDGET
+FUNCTION_NAME = fl_redraw_object, NONE, NONE, 1, WIDGET
 #
 FUNCTION_NAME = fl_add_box, NONE, WIDGET, 6, INT, INT, INT, INT, INT, STRING
 #
@@ -1471,13 +1473,17 @@ FUNCTION_NAME = printf, NONE, NONE, 2, STRING, POINTER
 FUNCTION_NAME = snprintf, NONE, NONE, 4, POINTER, INT, STRING, DOUBLE
 FUNCTION_NAME = strncpy, NONE, STRING, 3, POINTER, POINTER, INT
 FUNCTION_NAME = rand, NONE, INT, 0
+FUNCTION_NAME = random, NONE, INT, 0
 FUNCTION_NAME = srand, NONE, NONE, 1, INT
+FUNCTION_NAME = srandom, NONE, NONE, 1, INT
 FUNCTION_NAME = time, NONE, INT, 1, NULL
 FUNCTION_NAME = memset, NONE, NONE, 3, POINTER, INT, INT
 FUNCTION_NAME = sscanf, NONE, NONE, 3, POINTER, STRING, PTR_INT
 FUNCTION_NAME = abs, NONE, INT, 1, INT
 FUNCTION_NAME = div, NONE, INT, 2, INT, INT
+FUNCTION_NAME = fmod, NONE, DOUBLE, 2, DOUBLE, DOUBLE
 FUNCTION_NAME = fma, NONE, DOUBLE, 3, DOUBLE, DOUBLE, DOUBLE
+FUNCTION_NAME = usleep, NONE, NONE, 1, INT
 #
 # Some function names are reserved, create an alias
 #
@@ -1773,69 +1779,69 @@ ENDMACRO
 
 MACRO xscreensaver
 
+# Check for libX
 gtk_server_require libX11.so
-gtk_server_redefine g_snprintf NONE NONE 4 POINTER INT STRING INT
 
 # Seed random generator
 $time : time NULL
-srand $time
+srandom $time
 
 # Get width and height of screen
 $display : XOpenDisplay NULL
 $screen : XDefaultScreen $display
 $x : XDisplayWidth $display $screen
 $y : XDisplayHeight $display $screen
+$h : div $x 3
+$i : div $y 3
+
+# Wait to avoid fast key detection
+usleep 100000
 
 # Setup fullscreen window
 $window : fl_bgn_form FL_FLAT_BOX $x $y
-$timer : fl_add_timer FL_HIDDEN_TIMER 100 40 40 40 Timer
+$timer : fl_add_timer FL_HIDDEN_TIMER 40 40 40 40 Timer
 fl_set_timer $timer 0.15
 fl_end_form
 
 # Connect KeyPress event
-gtk_server_connect $window 1
-
+gtk_server_connect $window KeyPressMask
 fl_show_form $window FL_PLACE_FULLSCREEN FL_NOBORDER Screensaver
 
 # Set background to WHITE
+$event : gtk_server_callback update
 fl_rectangle 1 0 0 $x $y FL_WHITE
-
-$buffer : malloc 10
 
 # Mainloop
 $event : gtk_server_callback wait
 
 # Timer expired?
 $event COMPARE $timer
-$z VALUE 15
+$z VALUE 14
 fl_set_timer $timer 0.15
 
 # Generate color for circle
-$r : rand
-snprintf $buffer 2 %X $r
-$color : sscanf $buffer %X 0
+$r : random
+$color : fmod $r 156
+
+# Generate radius
+$r : random
+$a : fmod $r $h
+$r : random
+$b : fmod $r $i
 
 # Generate coordinates
-$r : rand
-snprintf $buffer 10 %d $r
-$p : sscanf $buffer %3i 0
-$p : abs $p
-
-$r : rand
-snprintf $buffer 10 %d $r
-$q : sscanf $buffer %3i 0
-$q : abs $q
+$r : random
+$p : fmod $r $x
+$r : random
+$q : fmod $r $y
 
 # Draw circle
-fl_pieslice 1 $p $q 200 200 0 3600 $color
-fl_pieslice 0 $p $q 200 200 0 3600 FL_BLACK
+fl_pieslice 1 $p $q $a $b 0 3600 $color
+fl_pieslice 0 $p $q $a $b 0 3600 FL_BLACK
 
 # Wait for keyboard
 $key : gtk_server_key
-$key EMPTY -18
-
-# Free resources
-free $buffer
+$key EMPTY -17
 
 gtk_server_exit
 
