Fixed issue in m_font macro for GTK3.

--- a/gtk-server/gtk-server.cfg
+++ b/gtk-server/gtk-server.cfg
@@ -2503,6 +2503,8 @@ $rgba : gtk_server_opaque
 $layout : pango_cairo_create_layout $kontext
 pango_layout_set_text $layout $1 -1
 $font : gtk_server_macro_var m_font font
+$font VALUE 2
+$font : &"Sans 10"
 
 $desc : pango_font_description_from_string $font
 pango_layout_set_font_description $layout $desc
