Improved the HUG 'out' macro for GTK3.

--- a/gtk-server/gtk-server.cfg
+++ b/gtk-server/gtk-server.cfg
@@ -1119,6 +1119,10 @@ ENUM_NAME = G_TYPE_RESERVED_BSE_FIRST, 128
 ENUM_NAME = G_TYPE_RESERVED_BSE_LAST, 192
 ENUM_NAME = G_TYPE_RESERVED_USER_FIRST,196
 #
+# PANGO
+#
+ENUM_NAME = PANGO_SCALE, 1024
+#
 # Cairo stuff
 #
 ENUM_NAME = CAIRO_CONTENT_COLOR, 4096
@@ -1478,7 +1482,9 @@ FUNCTION_NAME = srand, NONE, NONE, 1, INT
 FUNCTION_NAME = srandom, NONE, NONE, 1, INT
 FUNCTION_NAME = time, NONE, INT, 1, NULL
 FUNCTION_NAME = memset, NONE, NONE, 3, POINTER, INT, INT
-FUNCTION_NAME = sscanf, NONE, NONE, 3, POINTER, STRING, PTR_INT
+FUNCTION_NAME = sscanf, NONE, INT, 3, POINTER, STRING, PTR_INT
+FUNCTION_NAME = strtok, NONE, STRING, 2, STRING, STRING
+FUNCTION_NAME = strsep, NONE, STRING, 2, LONG, STRING
 FUNCTION_NAME = abs, NONE, INT, 1, INT
 FUNCTION_NAME = div, NONE, INT, 2, INT, INT
 FUNCTION_NAME = fmod, NONE, DOUBLE, 2, DOUBLE, DOUBLE
@@ -2497,28 +2503,32 @@ $kontext : gtk_server_macro_var u_draw draw
 $cairo GET $kontext
 $image GET $cairo
 
-# Prepare color
+# Prepare color and layout
 $rgba : gtk_server_opaque
-
 $layout : pango_cairo_create_layout $kontext
 pango_layout_set_text $layout $1 -1
+
+# Get font
 $font : gtk_server_macro_var m_font font
 $font VALUE 2
 $font : &"Sans 10"
-
 $desc : pango_font_description_from_string $font
 pango_layout_set_font_description $layout $desc
 pango_font_description_free $desc
 
-# TODO: background color
-#$w : malloc 16
-#$h : malloc 16
-#pango_layout_get_size $layout $w $h
-#gdk_rgba_parse $rgba $3
-#gdk_cairo_set_source_rgba $kontext $rgba
-#cairo_rectangle $kontext 10 10 $w $h
-#cairo_fill $kontext
+# Background color
+gtk_server_redefine pango_layout_get_size NONE NONE 3 WIDGET PTR_INT POINTER
+$a : pango_layout_get_size $layout NULL NULL
+gtk_server_redefine pango_layout_get_size NONE NONE 3 WIDGET POINTER PTR_INT
+$b : pango_layout_get_size $layout NULL NULL
+$w : div $a PANGO_SCALE
+$h : div $b PANGO_SCALE
+gdk_rgba_parse $rgba $3
+gdk_cairo_set_source_rgba $kontext $rgba
+cairo_rectangle $kontext $4 $5 $w $h
+cairo_fill $kontext
 
+# Text in foreground color
 gdk_rgba_parse $rgba $2
 gdk_cairo_set_source_rgba $kontext $rgba
 cairo_move_to $kontext $4 $5
@@ -2529,9 +2539,6 @@ pango_cairo_show_layout $kontext $layout
 gtk_image_set_from_surface $image $cairo
 g_free $rgba
 g_object_unref $layout
-
-# g_free $w
-# g_free $h
 
 ENDMACRO
 
