Improved HUG macros for coloring in GTK3.

--- a/gtk-server/gtk-server.cfg
+++ b/gtk-server/gtk-server.cfg
@@ -661,7 +661,9 @@ FUNCTION_NAME = gtk_widget_set_size_request, NONE, NONE, 3, WIDGET, INT, INT
 FUNCTION_NAME = gtk_widget_size_request, NONE, NONE, 2, WIDGET, WIDGET
 FUNCTION_NAME = gtk_widget_set_usize, NONE, NONE, 3, WIDGET, INT, INT
 FUNCTION_NAME = gtk_widget_modify_base, NONE, NONE, 3, WIDGET, INT, WIDGET
+FUNCTION_NAME = gtk_widget_override_background_color, NONE, NONE, 3, WIDGET, INT, WIDGET
 FUNCTION_NAME = gtk_widget_modify_text, NONE, NONE, 3, WIDGET, INT, WIDGET
+FUNCTION_NAME = gtk_widget_override_color, NONE, NONE, 3, WIDGET, INT, WIDGET
 FUNCTION_NAME = gtk_widget_modify_bg, NONE, NONE, 3, WIDGET, INT, WIDGET
 FUNCTION_NAME = gtk_widget_modify_fg, NONE, NONE, 3, WIDGET, INT, WIDGET
 FUNCTION_NAME = gtk_widget_modify_font, NONE, NONE, 2, WIDGET, WIDGET
@@ -1033,6 +1035,11 @@ ENUM_NAME = GTK_STATE_ACTIVE, 1
 ENUM_NAME = GTK_STATE_PRELIGHT, 2
 ENUM_NAME = GTK_STATE_SELECTED, 3
 ENUM_NAME = GTK_STATE_INSENSITIVE, 4
+ENUM_NAME = GTK_STATE_FLAG_NORMAL, 0
+ENUM_NAME = GTK_STATE_FLAG_ACTIVE, 1
+ENUM_NAME = GTK_STATE_FLAG_PRELIGHT, 2
+ENUM_NAME = GTK_STATE_FLAG_SELECTED, 4
+ENUM_NAME = GTK_STATE_FLAG_INSENSITIVE, 8
 #
 # Submenus
 #
@@ -2622,6 +2629,49 @@ g_free $opaque
 
 ENDMACRO
 
+# ------- GTK3 --------
+
+MACRO m_bgcolor
+
+# The complicated widgets use basecolor,
+# not bgcolor - so no need to GET an ASSOC here
+# Also not for WINDOW. :-)
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $2
+gtk_widget_override_background_color $1 GTK_STATE_FLAG_NORMAL $opaque
+g_free $opaque
+
+$3 EMPTY 20
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $3
+gtk_widget_override_background_color $1 GTK_STATE_FLAG_ACTIVE $opaque
+g_free $opaque
+
+$4 EMPTY 15
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $4
+gtk_widget_override_background_color $1 GTK_STATE_FLAG_PRELIGHT $opaque
+g_free $opaque
+
+$5 EMPTY 10
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $5
+gtk_widget_override_background_color $1 GTK_STATE_FLAG_SELECTED $opaque
+g_free $opaque
+
+$6 EMPTY 5
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $6
+gtk_widget_override_background_color $1 GTK_STATE_FLAG_INSENSITIVE $opaque
+g_free $opaque
+
+ENDMACRO
+
 #---------------------------------------------------------------------------
 
 MACRO u_fgcolor
@@ -2707,6 +2757,91 @@ g_free $opaque
 
 ENDMACRO
 
+# ------- GTK3 --------
+
+MACRO m_fgcolor
+
+# Get two assocs, last assoc is taken as real widget!
+$widget GET $1
+$real GET $widget
+
+# This is for the list widget
+$cell GET $real
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $2
+
+# Cell is empty? If so goto next
+$cell EMPTY 4
+gtk_server_redefine "g_object_set NONE NONE 4 WIDGET STRING STRING NULL"
+g_object_set $cell "foreground" $2 NULL
+JUMP 8
+
+# Other regular widgets
+$real EMPTY 3
+gtk_widget_override_color $real GTK_STATE_FLAG_NORMAL $opaque
+JUMP 5
+$widget EMPTY 3
+gtk_widget_override_color $widget GTK_STATE_FLAG_NORMAL $opaque
+JUMP 2
+gtk_widget_override_color $1 GTK_STATE_FLAG_NORMAL $opaque
+
+g_free $opaque
+$3 EMPTY 44
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $3
+$real EMPTY 3
+gtk_widget_override_color $real GTK_STATE_FLAG_ACTIVE $opaque
+JUMP 5
+$widget EMPTY 3
+gtk_widget_override_color $widget GTK_STATE_FLAG_ACTIVE $opaque
+JUMP 2
+gtk_widget_override_color $1 GTK_STATE_FLAG_ACTIVE $opaque
+
+g_free $opaque
+$4 EMPTY 33
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $4
+$real EMPTY 3
+gtk_widget_override_color $real GTK_STATE_FLAG_PRELIGHT $opaque
+JUMP 5
+$widget EMPTY 3
+gtk_widget_override_color $widget GTK_STATE_FLAG_PRELIGHT $opaque
+JUMP 2
+gtk_widget_override_color $1 GTK_STATE_FLAG_PRELIGHT $opaque
+
+g_free $opaque
+$5 EMPTY 22
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $5
+$real EMPTY 3
+gtk_widget_override_color $real GTK_STATE_FLAG_SELECTED $opaque
+JUMP 5
+$widget EMPTY 3
+gtk_widget_override_color $widget GTK_STATE_FLAG_SELECTED $opaque
+JUMP 2
+gtk_widget_override_color $1 GTK_STATE_FLAG_SELECTED $opaque
+
+g_free $opaque
+$6 EMPTY 11
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $6
+$real EMPTY 3
+gtk_widget_override_color $real GTK_STATE_FLAG_INSENSITIVE $opaque
+JUMP 5
+$widget EMPTY 3
+gtk_widget_override_color $widget GTK_STATE_FLAG_INSENSITIVE $opaque
+JUMP 2
+gtk_widget_override_color $1 GTK_STATE_FLAG_INSENSITIVE $opaque
+
+g_free $opaque
+
+ENDMACRO
+
 #---------------------------------------------------------------------------
 
 MACRO u_textcolor
@@ -2783,6 +2918,82 @@ g_free $opaque
 
 ENDMACRO
 
+# ------- GTK3 --------
+
+MACRO m_textcolor
+
+# Get two assocs, last assoc is taken as real widget!
+$widget GET $1
+$real GET $widget
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $2
+
+# Last assoc is empty? if so use first assoc
+$real EMPTY 3
+gtk_widget_override_color $real GTK_STATE_FLAG_NORMAL $opaque
+JUMP 5
+$widget EMPTY 3
+gtk_widget_override_color $widget GTK_STATE_FLAG_NORMAL $opaque
+JUMP 2
+gtk_widget_override_color $1 GTK_STATE_FLAG_NORMAL $opaque
+
+g_free $opaque
+$3 EMPTY 44
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $3
+$real EMPTY 3
+gtk_widget_override_color $real GTK_STATE_FLAG_ACTIVE $opaque
+JUMP 5
+$widget EMPTY 3
+gtk_widget_override_color $widget GTK_STATE_FLAG_ACTIVE $opaque
+JUMP 2
+gtk_widget_override_color $1 GTK_STATE_FLAG_ACTIVE $opaque
+
+g_free $opaque
+$4 EMPTY 33
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $4
+$real EMPTY 3
+gtk_widget_override_color $real GTK_STATE_FLAG_PRELIGHT $opaque
+JUMP 5
+$widget EMPTY 3
+gtk_widget_override_color $widget GTK_STATE_FLAG_PRELIGHT $opaque
+JUMP 2
+gtk_widget_override_color $1 GTK_STATE_FLAG_PRELIGHT $opaque
+
+g_free $opaque
+$5 EMPTY 22
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $5
+$real EMPTY 3
+gtk_widget_override_color $real GTK_STATE_FLAG_SELECTED $opaque
+JUMP 5
+$widget EMPTY 3
+gtk_widget_override_color $widget GTK_STATE_FLAG_SELECTED $opaque
+JUMP 2
+gtk_widget_override_color $1 GTK_STATE_FLAG_SELECTED $opaque
+
+g_free $opaque
+$6 EMPTY 11
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $6
+$real EMPTY 3
+gtk_widget_override_color $real GTK_STATE_FLAG_INSENSITIVE $opaque
+JUMP 5
+$widget EMPTY 3
+gtk_widget_override_color $widget GTK_STATE_FLAG_INSENSITIVE $opaque
+JUMP 2
+gtk_widget_override_color $1 GTK_STATE_FLAG_INSENSITIVE $opaque
+
+g_free $opaque
+
+ENDMACRO
+
 #---------------------------------------------------------------------------
 
 MACRO u_basecolor
@@ -2854,6 +3065,82 @@ $widget EMPTY 3
 gtk_widget_modify_base $widget 4 $opaque
 JUMP 2
 gtk_widget_modify_base $1 4 $opaque
+
+g_free $opaque
+
+ENDMACRO
+
+# ------- GTK3 --------
+
+MACRO m_basecolor
+
+# Get two assocs, last assoc is taken as real widget!
+$widget GET $1
+$real GET $widget
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $2
+
+# Last assoc is empty? if so use first assoc
+$real EMPTY 3
+gtk_widget_override_background_color $real GTK_STATE_FLAG_NORMAL $opaque
+JUMP 5
+$widget EMPTY 3
+gtk_widget_override_background_color $widget GTK_STATE_FLAG_NORMAL $opaque
+JUMP 2
+gtk_widget_override_background_color $1 GTK_STATE_FLAG_NORMAL $opaque
+
+g_free $opaque
+$3 EMPTY 44
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $3
+$real EMPTY 3
+gtk_widget_override_background_color $real GTK_STATE_FLAG_ACTIVE $opaque
+JUMP 5
+$widget EMPTY 3
+gtk_widget_override_background_color $widget GTK_STATE_FLAG_ACTIVE $opaque
+JUMP 2
+gtk_widget_override_background_color $1 GTK_STATE_FLAG_ACTIVE $opaque
+
+g_free $opaque
+$4 EMPTY 33
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $4
+$real EMPTY 3
+gtk_widget_override_background_color $real GTK_STATE_FLAG_PRELIGHT $opaque
+JUMP 5
+$widget EMPTY 3
+gtk_widget_override_background_color $widget GTK_STATE_FLAG_PRELIGHT $opaque
+JUMP 2
+gtk_widget_override_background_color $1 GTK_STATE_FLAG_PRELIGHT $opaque
+
+g_free $opaque
+$5 EMPTY 22
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $5
+$real EMPTY 3
+gtk_widget_override_background_color $real GTK_STATE_FLAG_SELECTED $opaque
+JUMP 5
+$widget EMPTY 3
+gtk_widget_override_background_color $widget GTK_STATE_FLAG_SELECTED $opaque
+JUMP 2
+gtk_widget_override_background_color $1 GTK_STATE_FLAG_SELECTED $opaque
+
+g_free $opaque
+$6 EMPTY 11
+
+$opaque : gtk_server_opaque
+gdk_rgba_parse $opaque $6
+$real EMPTY 3
+gtk_widget_override_background_color $real GTK_STATE_FLAG_INSENSITIVE $opaque
+JUMP 5
+$widget EMPTY 3
+gtk_widget_override_background_color $widget GTK_STATE_FLAG_INSENSITIVE $opaque
+JUMP 2
+gtk_widget_override_background_color $1 GTK_STATE_FLAG_INSENSITIVE $opaque
 
 g_free $opaque
 
@@ -3356,10 +3643,6 @@ ALIAS_NAME = m_list, u_list
 ALIAS_NAME = m_dialog, u_dialog
 ALIAS_NAME = m_mouse, u_mouse
 ALIAS_NAME = m_attach, u_attach
-ALIAS_NAME = m_bgcolor, u_bgcolor
-ALIAS_NAME = m_fgcolor, u_fgcolor
-ALIAS_NAME = m_textcolor, u_textcolor
-ALIAS_NAME = m_basecolor, u_basecolor
 ALIAS_NAME = m_button_text, u_button_text
 ALIAS_NAME = m_radio_text, u_radio_text
 ALIAS_NAME = m_check_text, u_check_text
