The hug macro 'circle' now also allows to be drawn as an ellipse in GTK3.

--- a/gtk-server/gtk-server.cfg
+++ b/gtk-server/gtk-server.cfg
@@ -769,6 +769,8 @@ FUNCTION_NAME = cairo_line_to, NONE, NONE, 3, WIDGET, DOUBLE, DOUBLE
 FUNCTION_NAME = cairo_move_to, NONE, NONE, 3, WIDGET, DOUBLE, DOUBLE
 FUNCTION_NAME = cairo_paint, NONE, NONE, 1, WIDGET
 FUNCTION_NAME = cairo_rectangle, NONE, NONE, 5, WIDGET, DOUBLE, DOUBLE, DOUBLE, DOUBLE
+FUNCTION_NAME = cairo_restore, NONE, NONE, 1, WIDGET
+FUNCTION_NAME = cairo_save, NONE, NONE, 1, WIDGET
 FUNCTION_NAME = cairo_scale, NONE, NONE, 3, WIDGET, DOUBLE, DOUBLE
 FUNCTION_NAME = cairo_select_font_face, NONE, NONE, 4, WIDGET, STRING, INT, INT
 FUNCTION_NAME = cairo_set_antialias, NONE, NONE, 2, WIDGET, INT
@@ -781,6 +783,7 @@ FUNCTION_NAME = cairo_show_text, NONE, NONE, 2, WIDGET, STRING
 FUNCTION_NAME = cairo_stroke, NONE, NONE, 1, WIDGET
 FUNCTION_NAME = cairo_surface_destroy, NONE, NONE, 1, WIDGET
 FUNCTION_NAME = cairo_surface_flush, NONE, NONE, 1, WIDGET
+FUNCTION_NAME = cairo_translate, NONE, NONE, 3, WIDGET, DOUBLE, DOUBLE
 #
 # The internal functions (not necessary but sometimes handy for language bindings like newLisp)
 #
@@ -2328,20 +2331,30 @@ MACRO m_circle
 $kontext : gtk_server_macro_var u_draw draw
 $cairo GET $kontext
 $image GET $cairo
+
 # Set color
 $rgba : gtk_server_opaque
 gdk_rgba_parse $rgba $1
 gdk_cairo_set_source_rgba $kontext $rgba
+
 # Calculate radius and coordinates
-$half : div $4 2
-$x : fma $2 1 $half
-$y : fma $3 1 $half
+$h : div $4 2
+$j : div $5 2
+$x : fma $2 1 $h
+$y : fma $3 1 $j
+
+# Setup the ellips or circle
+cairo_save $kontext
+cairo_translate $kontext $x $y
+cairo_scale $kontext $h $j
 # Draw circle
-cairo_arc $kontext $x $y $half 0 6.28
+cairo_arc $kontext 0 0 1 0 6.28
 $6 VALUE 3
 cairo_stroke $kontext
 JUMP 2
 cairo_fill $kontext
+cairo_restore $kontext
+
 # Render
 gtk_image_set_from_surface $image $cairo
 g_free $rgba
