--- a/gtk-server/gtk-server.cfg
+++ b/gtk-server/gtk-server.cfg
@@ -30,13 +30,13 @@
 # LIB_NAME = libgtk-x11-2.0.so, libgdk-x11-2.0.so
 #
 # GTK3 backend
-# LIB_NAME = libgtk-3.0.so, libgdk-3.0.so
+# LIB_NAME = libgtk-3.so, libgdk-3.so
 #
 # Common GTK2/GTK3 libs
 # LIB_NAME = libatk-1.0.so, libpango-1.0.so, libgdk_pixbuf_xlib-2.0.so, libglib-2.0.so, libgobject-2.0.so, libcairo.so
 #
 # Glade
-# LIB_NAME = libglade-2.0.so.0
+# LIB_NAME = libglade-2.0.so
 #
 # GtkGlarea, GtkGlExt
 # LIB_NAME = libgtkgl-2.0.so, libgtkglext-x11-1.0.so, libgdkglext-x11-1.0.so
@@ -57,7 +57,7 @@
 # LIB_NAME = libX11.so, libglut.so, libGLU.so, libGL.so
 #
 # Generic libs
-# LIB_NAME = libm.so, libc.so.6
+# LIB_NAME = libm.so, libc.so
 #
 # We can include an additional configfile here. For example, a configfile with macros.
 #
